- Added : Upgrade script from ImpressCMS 1.0 to ImpressCMS 1.1 which only adds the dbversion field to the modules table; after this upgrade has been performed, all database upgrades will be done automatically when updating the System module (malanciault) 
- Added : Addition of assigning language's css & Javascripts files to the template. (stranger)

- Improved : The pm form to use the selected editor. (the_rplima)
- Improved : XoopsTree::getNicePathFromId has new parameter, allowing specification of the separator between links (skenow)
- Improved : System admin page markup (skenow)
- Improved : Revamping the modules list in System Admin > Modules (mcdonald/the_rplima/davidl2/mrtheme)

- Changed : Moved the Smarty library from /class to /libraries. (nekro)
- Changed : Moved the PHPmailer library from /class to /libraries. (nekro)
- Changed : Textarea is now widely. Better to create blocks and editing of templates. (sato-san)

- Fixed #1899685 : Parse error: banners.php on line 226 (kurak_bu/nekro)
- Fixed #1932374 : Changing the 100% width of table in xoops.css to make it 100% only for table.outer (malanciault/the_rplima)  


=========================================
2008-03-10 : ImpressCMS 1.0 "Janus" Final
=========================================

- Improved : Updating the VersionChecker to handle situation where the impresscms_xml feed cann not be read (firewall, no internet access, etc...) (malanciault)
- Improved : In the VersionChecker, changed errors to an array and provided a the language constant as the error message - the version checker now reports correctly when it cannot find a valid version_xml (skenow) 
- Improved : admin_version template (sato-san/davidl2)
- Improved : Syntax/grammar check in install wizard (andrewvincent/xoops-magazine)
- Improved : Syntax/grammar check in preferences (andrewvincent)
- Improved : Changing the links in About ImpressCMS admin menu for the links to open in new window (malanciaut)