@@ -40,6 +40,8 @@ define("_MD_AM_ML_AUTOSELECT_ENABLED","Autoselect the language depeding the brow
 +define("_MD_AM_WELCOMEMSGDSC","Send a welcome message to new user when their account gets activated. The content of this message can be configured in the following option.");
 +define("_MD_AM_WELCOMEMSG_CONTENT","Content of the welcome message");
 +define("_MD_AM_WELCOMEMSG_CONTENTDSC","You can edit the message that is sent to the new user. Note that you can use the following tags: <br /><br />- {UNAME} = username of the user<br />- {X_UEMAIL} = email of the user<br />- {X_ADMINMAIL} = admin email address<br />- {X_SITENAME} = name of the site<br />- {X_SITEURL} = URL of the site");
++define("_MD_AM_EXT_DATE","Do you want to use an extended/local date function?");
++define("_MD_AM_EXT_DATEDSC","Note: by activating this option, ImpressCMS will use an extended calendar script <b>ONLY</b> if you have this script running on your site.<br />Please visit <a href='http://wiki.impresscms.org/index.php?title=Extended_date_function'>extended date function</a> for more info.");
 
 modules/system/languages/english/admin/groups.php
 -------------------------------------------------
