@@ -23,6 +23,7 @@ Unreleased : ImpressCMS 1.1 "???" Alpha
 - Added : Implementation of the onUpdate event for the System module to allow easy database upgrades performed automatically while updating the System module (malanciault)
 - Added : Upgrade script from ImpressCMS 1.0 to ImpressCMS 1.1 which only adds the dbversion field to the modules table; after this upgrade has been performed, all database upgrades will be done automatically when updating the System module (malanciault) 
 - Added : Addition of assigning language's css & Javascripts files to the template. (stranger)
+- Added : Addition of assigning/integrating a local date function in to the core, configurable through administration menu. (stranger)
 
 - Improved : The pm form to use the selected editor. (the_rplima)
 - Improved : XoopsTree::getNicePathFromId has new parameter, allowing specification of the separator between links (skenow)
